Global renaming from bevy-bridge to bevy-remote-protocol

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bevy-bridge",
+  "name": "bevy-remote-protocol",
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
