--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "devDependencies": {
     "@types/node": "^22.13.1",
     "tsup": "^8.3.6",
